2005-06-19  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Fix encoding of ia64_fclass.

2005-06-12  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-06-09  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-05-30  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/codegen.c: Fix it after latest changes.

2005-05-29  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.
	
	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-05-28  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.
	
	* ia64/ia64-codegen.h: Ongoing IA64 work.

	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-05-26  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-05-22  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.
	
	* ia64/ia64-codegen.h: Ongoing IA64 work.

	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-05-21  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-05-19  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h ia64/codegen.c: Ongoing ia64 work.

2005-05-18  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h (ia64_codegen_init): Rename macro parameter.

2005-05-14  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am: Only compile libmonoarch if the interpreter is compiled.

	* ia64/ia64-codegen.h: Add IA64 code generation macros.

	* Makefile.am: Add ia64 subdir.

2005-05-05  Zoltan Varga  <vargaz@freemail.hu>

	* alpha/tramp.c: Applied patch from Jakub Bogusz <qboosh@pld-linux.org>.

2005-03-28  Zoltan Varga  <vargaz@freemail.hu>

	* amd64/amd64-codegen.h: Avoid emitting a rex in some places.

2005-03-15  Zoltan Varga  <vargaz@freemail.hu>

	* amd64/amd64-codegen.h (amd64_emit_rex): Emit a rex when accessing the
	byte registers.
	
	* amd64/amd64-codegen.h (AMD64_BYTE_REGS): Add AMD64_BYTE_REGS macro.

2005-03-14  Zoltan Varga  <vargaz@freemail.hu>
