@@ -1,3 +1,7 @@
+2005-06-23  Zoltan Varga  <vargaz@freemail.hu>
+
+	* ia64/ia64-codegen.h: Add some new pseudo ops.
+
 2005-06-19  Zoltan Varga  <vargaz@freemail.hu>
 
 	* ia64/ia64-codegen.h: Fix encoding of ia64_fclass.
